--- a/src/components/icon/demo/demo.html
+++ b/src/components/icon/demo/demo.html
@@ -4,7 +4,7 @@
     <div class="icons">
       <uex-icon ng-repeat="icon in icons"
                 icon="{{icon.name}}"
-                tooltip="n, {{icon.id}}"
+                uex-tooltip="n, {{icon.id}}"
                 data-clipboard-text="{{icon.name}}" />
     </div>
   </section>
