--- a/src/core/sass/variables.scss
+++ b/src/core/sass/variables.scss
@@ -1,5 +1,6 @@
 // colors
 $brand-primary: #3F51B5 !default;
+$brand-danger: #d9534f !default;
 $color-background: #f5f5f5 !default;
 $color-border: rgba(0,0,0,.15) !default;
 $color-border-focus: rgba(0,0,0,.3) !default;
