--- a/src/core/core.scss
+++ b/src/core/core.scss
@@ -29,3 +29,15 @@
     opacity: 1;
   }
 }
+
+.has-caret::after {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  vertical-align: -2px;
+  content: "";
+  border: 4px solid;
+  border-right-color: transparent;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+}
