--- a/src/components/modal/demo/demo.html
+++ b/src/components/modal/demo/demo.html
@@ -2,7 +2,14 @@
 
   <section ng-controller="modalCtrl as vm">
     <button ng-click="vm.go()">Go</button>
+    <button ng-click="vm.go2()">Go2</button>
     <h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1>
+    <modal delegate="vm.m" title="Foo title">
+      Foo
+      <div ng-repeat="v in [1,2,3]">
+        {{v}}
+      </div>
+    </modal>
   </section>
 
 </div>
