+ confirm and info extensions to modal

--- a/src/components/modal/demo/demo.html
+++ b/src/components/modal/demo/demo.html
@@ -3,6 +3,8 @@
   <section ng-controller="modalCtrl as vm">
     <button ng-click="vm.go()">Go</button>
     <button ng-click="vm.go2()">Go2</button>
+    <button ng-click="vm.goConfirm()">Go Confirm</button>
+    <button ng-click="vm.goInfo()">Go Info</button>
     <h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1>
     <modal delegate="vm.m" title="Foo title">
       Foo
