--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -52,7 +52,7 @@ body.uex-modal-active {
   opacity: 0;
 
   .uex-modal-container {
-    transform: translateY(-100%);
+    transform: translateY(-30px);
   }
 }
 
