--- a/src/components/modal/demo/demo.html
+++ b/src/components/modal/demo/demo.html
@@ -6,7 +6,7 @@
     <button ng-click="vm.goConfirm()">Go Confirm</button>
     <button ng-click="vm.goInfo()">Go Info</button>
     <h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1>
-    <modal delegate="vm.m" title="Foo title">
+    <modal delegate="vm.m" title="Foo title" classes="modal-bar">
       Foo
       <div ng-repeat="v in [1,2,3]">
         {{v}}
