--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -27,7 +27,7 @@ body.uex-modal-active {
   }
 }
 
-.uex-modal-wrapper {
+.uex-modal {
   z-index: 10001;
   position: fixed;
   top: 0;
@@ -41,14 +41,14 @@ body.uex-modal-active {
   }
 }
 
-.uex-modal-wrapper.inactive {
+.uex-modal.inactive {
   opacity: 0;
   @media (max-width: $layout-bp-xp-max) {
     opacity: 1;
   }
 }
 
-.uex-modal-wrapper.ng-enter {
+.uex-modal.ng-enter {
   opacity: 0;
 
   .uex-modal-container {
@@ -56,7 +56,7 @@ body.uex-modal-active {
   }
 }
 
-.uex-modal-wrapper.ng-enter.ng-enter-active {
+.uex-modal.ng-enter.ng-enter-active {
   opacity: 1;
 
   .uex-modal-container {
@@ -64,11 +64,11 @@ body.uex-modal-active {
   }
 }
 
-.uex-modal-wrapper.ng-leave {
+.uex-modal.ng-leave {
   opacity: 1;
 }
 
-.uex-modal-wrapper.ng-leave.ng-leave-active {
+.uex-modal.ng-leave.ng-leave-active {
   opacity: 0;
 }
 
