Encapsulate smart positioning logic inside a service
Also add the 'margin' option.

--- a/src/components/pop/demo/demo.html
+++ b/src/components/pop/demo/demo.html
@@ -15,7 +15,7 @@
       <div>This is 2</div>
       <div>This is 2</div>
     </uex-pop>
-    <uex-pop delegate="$ctrl.p2" placement="right" align="center" classes="pop-menu">
+    <uex-pop delegate="$ctrl.p2" placement="right" align="start" classes="pop-menu">
       <ul>
         <li>Something 1</li>
         <li>Something 2</li>
