--- a/src/components/pop/demo/demo.html
+++ b/src/components/pop/demo/demo.html
@@ -21,6 +21,7 @@
         <li>Something 2</li>
         <li>Something 3</li>
         <li>Something 4</li>
+        <li>Something 5</li>
       </ul>
     </uex-pop>
   </div>
