--- a/src/components/pop/demo/demo.html
+++ b/src/components/pop/demo/demo.html
@@ -18,7 +18,7 @@
     <button type="button" uex-pop-container uex-pop-target>
       Go2
       <uex-pop placement="right" align="start" classes="pop-menu">
-        <ul>
+        <ul style="list-style:none">
           <li>Something 1</li>
           <li>Something 2</li>
           <li>Something 3</li>
