--- a/src/components/modal/demo/demo.html
+++ b/src/components/modal/demo/demo.html
@@ -8,16 +8,16 @@
     <button ng-click="vm.c1.open()">Go Custom 1</button>
     <button ng-click="vm.c2.open()">Go Custom 2</button>
     <h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1><h1>asd</h1>
-    <uex-modal delegate="vm.m" title="Foo title" classes="modal-bar">
+    <uex-modal delegate="vm.m" title="Foo title" class="modal-bar">
       Foo
       <div ng-repeat="v in [1,2,3]">
         {{v}}
       </div>
     </uex-modal>
-    <uex-modal delegate="vm.c1" title="Custom Modal 1" classes="modal-c-1">
+    <uex-modal delegate="vm.c1" title="Custom Modal 1" class="modal-c-1">
       Foo
     </uex-modal>
-    <uex-modal delegate="vm.c2" title="Custom Modal 2" classes="modal-c-2">
+    <uex-modal delegate="vm.c2" title="Custom Modal 2" class="modal-c-2">
       Foo
     </uex-modal>
   </section>
