--- a/src/components/pop/demo/demo.html
+++ b/src/components/pop/demo/demo.html
@@ -17,7 +17,7 @@
     </button>
     <button type="button" uex-pop-container uex-pop-target>
       Go2
-      <uex-pop placement="right" align="start" classes="pop-menu">
+      <uex-pop placement="right" align="start" class="pop-menu">
         <ul style="list-style:none">
           <li>Something 1</li>
           <li>Something 2</li>
