--- a/src/components/poptip/demo/demo.html
+++ b/src/components/poptip/demo/demo.html
@@ -7,13 +7,13 @@
   </div>
   <div uex-poptip-container uex-poptip-target style="float:right;margin-right:15px">
     poptip bottom
-    <uex-poptip placement="bottom" align="center" classes="poptip-c1">
+    <uex-poptip placement="bottom" align="center" class="poptip-c1">
       A collection of <strong>angular</strong> components.
     </uex-poptip>
   </div>
   <div uex-poptip-container uex-poptip-target>
     poptip left
-    <uex-poptip placement="left" align="start" classes="poptip-c2">
+    <uex-poptip placement="left" align="start" class="poptip-c2">
       A collection of <strong>angular</strong> components.
     </uex-poptip>
   </div>
