--- a/src/components/autocomplete/demo/demo.html
+++ b/src/components/autocomplete/demo/demo.html
@@ -1,4 +1,4 @@
-<div class="component-autocomplete-page" ng-controller="uexAutocompleteCtrl as vm">
+<div id="component-autocomplete-page" ng-controller="uexAutocompleteCtrl as vm">
   <section>
     <header>Basic</header>
     <div>
