--- a/src/components/icon/demo/demo.html
+++ b/src/components/icon/demo/demo.html
@@ -1,4 +1,4 @@
-<div class="component-icon-page">
+<div id="component-icon-page">
   <section ng-controller="iconCtrl">
     <header>Icons</header>
     <div class="icons">
