--- a/src/components/p/demo/demo.html
+++ b/src/components/p/demo/demo.html
@@ -1,4 +1,4 @@
-<div class="component-p-page" ng-controller="pCtrl as vm">
+<div id="component-p-page" ng-controller="pCtrl as vm">
   <section>
     <header>Basic</header>
     <form uex-p="submit1()">
