--- a/src/components/poptip/demo/demo.html
+++ b/src/components/poptip/demo/demo.html
@@ -23,7 +23,7 @@
       A collection of <strong>angular</strong> components.
     </uex-poptip>
   </div>
-  <a ui-sref="components" uex-poptip-container uex-poptip-target>
+  <a ui-sref="home" uex-poptip-container uex-poptip-target>
     Some
     <uex-poptip>
       A collection of components
