--- a/src/components/icon/demo/demo.scss
+++ b/src/components/icon/demo/demo.scss
@@ -4,6 +4,8 @@
       padding: 5px;
       border-radius: 5px;
       cursor: pointer;
+      width: 30px;
+      height: 30px;
 
       &:hover {
         background: #f1f1f1;
