select: * major changes
Use pop to render the popup instead of doing it manually.

--- a/src/components/select/demo/demo.html
+++ b/src/components/select/demo/demo.html
@@ -5,23 +5,23 @@
   }
 </style>
 
-<div ng-controller="uexSelectCtrl as vm">
+<div ng-controller="uexSelectCtrl as $ctrl">
   <section>
     <header>Basic</header>
-    <uex-select exp="item in items as item.name" ng-model="vm.selected1" title="Selected" class="select-check">
+    <uex-select exp="item in $ctrl.items as item.name" ng-model="$ctrl.selected1" title="Selected" class="select-check">
       {{item.name}}
-      <uex-icon icon="check" ng-if="$selected"/>
+      <uex-icon icon="check" ng-if="$selected"></uex-icon>
     </uex-select>
   </section>
   <section>
     <header>Async</header>
-    <uex-select exp="item in getItems(q) as item.name" ng-model="vm.selected2" title="Selected">
+    <uex-select exp="item in $ctrl.getItems(q) as item.name" ng-model="$ctrl.selected2" title="Selected">
       {{item.name}}
     </uex-select>
   </section>
   <section>
     <header>Simple select</header>
-    <uex-select exp="item in ['Foo', 'Bar', 'Baz']" ng-model="vm.selected3" title="Selected">
+    <uex-select exp="item in ['Foo', 'Bar', 'Baz']" ng-model="$ctrl.selected3" title="Selected">
       <uex-select-simple>{{item}}</uex-select-simple>
     </uex-select>
   </section>
