--- a/src/demo/layout.scss
+++ b/src/demo/layout.scss
@@ -22,10 +22,10 @@ body {
   .pivot-item {
     display: block;
     text-decoration: none;
-    padding: 5px 10px 5px 10px;
+    padding: 5px 10px;
     color: #555;
     opacity: 0.7;
-    transition: opacity linear .1s;
+    transition: opacity linear 0.1s;
 
     &:hover {
       color: $brand-primary;
@@ -43,6 +43,7 @@ body {
 #main-content {
   margin-left: 200px;
   margin-top: 20px;
+  padding: 0 10px;
 }
 
 section {
