--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -2,32 +2,10 @@ uex-modal {
   display: none;
 }
 
-.uex-modal-bd {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.4);
-  z-index: 10000;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity linear 0.1s;
-  @media (max-width: $layout-bp-xp-max) {
-    transition: none;
-    display: none;
-  }
-}
-
 body.uex-modal-active {
   overflow: hidden!important;
   @media (min-width: $layout-bp-sm) {
     margin-right: 17px;
-  }
-
-  .uex-modal-bd {
-    opacity: 1;
-    pointer-events: auto;
   }
 }
 
@@ -40,6 +18,7 @@ body.uex-modal-active {
   left: 0;
   overflow-y: scroll;
   transition: opacity linear 0.1s;
+  background: rgba(0,0,0,0.4);
   @media (max-width: $layout-bp-xp-max) {
     overflow: hidden;
   }
@@ -52,39 +31,33 @@ body.uex-modal-active {
   }
 }
 
-.uex-modal.ng-enter {
-  opacity: 0;
-
-  .uex-modal-container {
-    transform: translateY(-30px);
-  }
-
-  &.ng-enter-active {
-    opacity: 1;
+.uex-modal {
+  &.ng-enter {
+    opacity: 0;
 
     .uex-modal-container {
-      transform: translateY(0);
+      transform: translateY(-30px);
+    }
+
+    &.ng-enter-active {
+      opacity: 1;
+
+      .uex-modal-container {
+        transform: translateY(0);
+      }
+    }
+  }
+
+  &.ng-leave {
+    &.ng-leave-active {
+      opacity: 0;
     }
   }
 }
 
-.uex-modal.ng-leave {
-  &.ng-leave-active {
-    opacity: 0;
-  }
-}
-
-.uex-modal-inner-bd {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
-}
-
 .uex-modal-container {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  position: relative;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   width: 600px;
   margin: 20px auto;
   border-radius: 5px;
@@ -126,12 +99,13 @@ body.uex-modal-active {
   overflow-y: auto;
 }
 
-modal {
-  display: none;
-}
-
 @media (max-width: $layout-bp-xp-max) {
+  .uex-modal {
+    background: transparent;
+  }
+
   .uex-modal-container {
+    box-shadow: none;
     width: 100%;
     height: 100%;
     margin: 0;
