--- a/src/components/poptip/demo/demo.html
+++ b/src/components/poptip/demo/demo.html
@@ -2,25 +2,25 @@
   <header>Basic</header>
   <div uex-poptip-container uex-poptip-target>
     poptip right
-    <uex-poptip placement="right" align="center">
+    <uex-poptip placement="right center">
       A collection of <strong>angular</strong> components.
     </uex-poptip>
   </div>
   <div uex-poptip-container uex-poptip-target style="float:right;margin-right:15px">
     poptip bottom
-    <uex-poptip placement="bottom" align="center" class="poptip-c1">
+    <uex-poptip placement="bottom center" class="poptip-c1">
       A collection of <strong>angular</strong> components.
     </uex-poptip>
   </div>
   <div uex-poptip-container uex-poptip-target>
     poptip left
-    <uex-poptip placement="left" align="start" class="poptip-c2">
+    <uex-poptip placement="left start" class="poptip-c2">
       A collection of <strong>angular</strong> components.
     </uex-poptip>
   </div>
   <div uex-poptip-container uex-poptip-target>
     poptip top
-    <uex-poptip placement="top" align="end">
+    <uex-poptip placement="top end">
       A collection of <strong>angular</strong> components.
     </uex-poptip>
   </div>
