--- a/src/components/p/demo/demo.html
+++ b/src/components/p/demo/demo.html
@@ -6,7 +6,7 @@
         Running...
       </div>
       <div class="form-group">
-        <input type="submit" name="name" value="Submit" ng-disabled="$p.$running">
+        <input type="submit" name="name" value="Submit" ng-disabled="$uexP.running">
       </div>
     </form>
   </section>
