--- a/src/components/icon/demo/demo.html
+++ b/src/components/icon/demo/demo.html
@@ -11,6 +11,21 @@
     </div>
   </section>
   <section>
+    <header>Buttons</header>
+    <button type="button">
+      <uex-icon icon="add"></uex-icon>
+      Foo
+    </button>
+    <button type="button">
+      <uex-icon icon="edit"></uex-icon>
+      Foo
+    </button>
+    <button type="button">
+      <uex-icon icon="done"></uex-icon>
+      Foo
+    </button>
+  </section>
+  <section>
     <header>Flexible icons</header>
     <h5 class="uex-flexible-wrapper">
       <uex-icon icon="close"></uex-icon>
