--- a/src/core/sass/variables.scss
+++ b/src/core/sass/variables.scss
@@ -15,4 +15,4 @@ $layout-bp-lg: 1920px !default;
 $layout-bp-xp-max: $layout-bp-xs - 1;
 
 // sizes
-$icon-size: rem(2.000) !default;
+$icon-size: 16px;
