--- a/src/core/core.scss
+++ b/src/core/core.scss
@@ -13,6 +13,11 @@ body {
   margin: 0;
 }
 
+*:after,
+*:before {
+  box-sizing: border-box;
+}
+
 .right {
   float: right !important;
 }
@@ -44,4 +49,13 @@ body {
   border-right-color: transparent;
   border-bottom-color: transparent;
   border-left-color: transparent;
+}
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
