--- a/src/components/checkbox/demo/demo.html
+++ b/src/components/checkbox/demo/demo.html
@@ -28,5 +28,23 @@
         </p>
       </uex-checkbox>
     </div>
+
+    <div>
+      <uex-checkbox ng-model="$ctrl.check2">
+        Check 2
+        <p>
+          This is a collection of services and components for angular.
+        </p>
+      </uex-checkbox>
+    </div>
+
+    <div>
+      <uex-checkbox ng-model="$ctrl.check3">
+        Check 3
+        <p>
+          This is a collection of services and components for angular.
+        </p>
+      </uex-checkbox>
+    </div>
   </section>
 </div>
