--- a/src/components/radio/radio.scss
+++ b/src/components/radio/radio.scss
@@ -15,7 +15,7 @@ uex-radio {
     transition: .1s;
     width: 20px;
     height: 20px;
-    border: 2px solid rgba(0, 0, 0, 0.5);
+    border: 2px solid $color-border-focus;
     border-radius: 50%;
   }
 
@@ -48,7 +48,7 @@ uex-radio {
 
     > p {
       margin-top: 5px;
-      color: #888;
+      color: $color-text-2;
       font-size: 14px
     }
   }
