--- a/src/core/sass/variables.scss
+++ b/src/core/sass/variables.scss
@@ -2,9 +2,10 @@
 $brand-primary: #3F51B5 !default;
 $brand-danger: #d9534f !default;
 $color-background: #f5f5f5 !default;
-$color-border: rgba(0,0,0,.15) !default;
-$color-border-focus: rgba(0,0,0,.3) !default;
-$gray-light: #888 !default;
+$color-border: rgba(0,0,0,.2) !default;
+$color-border-focus: rgba(0,0,0,.4) !default;
+$color-text: #333 !default;
+$color-text-2: #777 !default;
 
 // breakpoints
 $layout-bp-xs: 600px !default;
@@ -13,6 +14,3 @@ $layout-bp-md: 1280px !default;
 $layout-bp-lg: 1920px !default;
 
 $layout-bp-xp-max: $layout-bp-xs - 1;
-
-// sizes
-$icon-size: 16px;
