checkbox, radio: check for default prevented before handling events

--- a/src/components/checkbox/demo/demo.html
+++ b/src/components/checkbox/demo/demo.html
@@ -47,4 +47,19 @@
       </uex-checkbox>
     </div>
   </section>
+
+  <section>
+    <header>
+      Custom handler
+    </header>
+
+    <div>
+      <uex-checkbox ng-model="$ctrl.check4" ng-click="$ctrl.toggle4($event)">
+        Check 4
+        <p>
+          This is a collection of services and components for angular.
+        </p>
+      </uex-checkbox>
+    </div>
+  </section>
 </div>
