p: prevent default on run

--- a/src/components/p/demo/demo.html
+++ b/src/components/p/demo/demo.html
@@ -51,4 +51,21 @@
       </div>
     </form>
   </section>
+  <section>
+    <header>uex-p-btn with one time</header>
+    <div uex-p="submit4()">
+      <div uex-p-running>
+        Running...
+      </div>
+      <div uex-p-success>
+        Success!!
+      </div>
+      <div uex-p-error>
+        Error!!
+      </div>
+      <uex-checkbox ng-model="check4" uex-p-src>
+        Some checkbox
+      </uex-checkbox>
+    </div>
+  </section>
 </div>
