poptip: color mixin

--- a/src/components/poptip/demo/demo.scss
+++ b/src/components/poptip/demo/demo.scss
@@ -7,25 +7,7 @@
 }
 
 .uex-poptip.poptip-c1 {
-  .uex-poptip-content {
-    background: #4285f4;
-  }
-}
-
-.uex-poptip.poptip-c1.uex-poptip-p-top .uex-poptip-arrow {
-  border-top-color: #4285f4;
-}
-
-.uex-poptip.poptip-c1.uex-poptip-p-right .uex-poptip-arrow {
-  border-right-color: #4285f4;
-}
-
-.uex-poptip.poptip-c1.uex-poptip-p-bottom .uex-poptip-arrow {
-  border-bottom-color: #4285f4;
-}
-
-.uex-poptip.poptip-c1.uex-poptip-p-left .uex-poptip-arrow {
-  border-left-color: #4285f4;
+  @include uex-poptip-color(#4285f4);
 }
 
 .uex-poptip.poptip-c2 {
